SERVER-90485 Fix $sort on fields, produced by $unwind (#22290)

### Issue

SERVER-90485

### Description

$unwind has an optimization to push $sort in front of it, if possible.
This optimization incorrectly pushed $sort down if it was performed on
array index field, generated by $unwind.

Replaced bidirectionalPathPrefixOf with ModPaths.canModify. It was the
only usage of this function, so I removed it.

### Testing

https://spruce.mongodb.com/version/664757ec5cd24f0007f22bd5/tasks

GitOrigin-RevId: 14050193ffb2e3381763e0cbeb88065d0d37cfce