src/mongo/db/matcher/expression_algo.cpp
@@ -1234,11 +1234,6 @@ bool isPathPrefixOf(StringData first, StringData second) {
     return second.startsWith(first) && second[first.size()] == '.';
 }
 
-bool bidirectionalPathPrefixOf(StringData first, StringData second) {
-    return first == second || expression::isPathPrefixOf(first, second) ||
-        expression::isPathPrefixOf(second, first);
-}
-
 std::pair<StringMap<std::unique_ptr<MatchExpression>>, std::unique_ptr<MatchExpression>>
 splitMatchExpressionForColumns(const MatchExpression* me) {
     StringMap<std::unique_ptr<MatchExpression>> out;
